--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,15 @@ asgiref==3.6.0
 autopep8==2.0.2
 black==23.3.0
 click==8.1.3
+dj-database-url==1.3.0
 Django==4.2
 mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.1
 platformdirs==3.2.0
+psycopg2-binary==2.9.6
 pycodestyle==2.10.0
+python-dotenv==1.0.0
 sqlparse==0.4.3
 tomli==2.0.1
+typing_extensions==4.5.0
