--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.6.2
 apturl==0.5.2
 asgiref==3.6.0
 autopep8==2.0.2
@@ -19,15 +20,26 @@ defer==1.0.6
 dill==0.3.6
 distro==1.7.0
 distro-info===1.1build1
+dj-database-url==1.3.0
+Django==4.2
+django-jazzmin==2.6.0
+dnspython==2.3.0
 duplicity==0.8.21
+email-validator==2.0.0.post2
+fastapi==0.95.1
 fasteners==0.14.1
 filelock==3.12.0
 fsspec==2023.4.0
 future==0.18.2
+h11==0.14.0
+httpcore==0.17.0
 httplib2==0.20.2
+httptools==0.5.0
+httpx==0.24.0
 huggingface-hub==0.14.1
 idna==3.3
 importlib-metadata==4.6.4
+itsdangerous==2.1.2
 jeepney==0.7.1
 Jinja2==3.1.2
 joblib==1.2.0
@@ -64,6 +76,7 @@ nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 oauthlib==3.2.0
 olefile==0.46
+orjson==3.8.12
 packaging==23.0
 pandas==2.0.1
 paramiko==2.9.3
@@ -78,16 +91,19 @@ pyarrow==12.0.0
 pycairo==1.20.1
 pycodestyle==2.10.0
 pycups==2.0.1
+pydantic==1.10.7
 PyGObject==3.42.1
 PyJWT==2.3.0
 pymacaroons==0.13.0
 PyNaCl==1.5.0
 pyparsing==2.4.7
+PyPDF2==3.0.1
 pyRFC3339==1.1
 python-apt==2.4.0+ubuntu1
 python-dateutil==2.8.2
 python-debian===0.1.43ubuntu1
 python-dotenv==1.0.0
+python-multipart==0.0.6
 pytz==2022.1
 pyxdg==0.27
 PyYAML==5.4.1
@@ -98,7 +114,9 @@ sacremoses==0.0.53
 SecretStorage==3.3.1
 sentencepiece==0.1.99
 six==1.16.0
+sniffio==1.3.0
 sqlparse==0.4.3
+starlette==0.26.1
 sympy==1.11.1
 systemd-python==234
 tokenizers==0.13.3
@@ -112,10 +130,15 @@ tzdata==2023.3
 ubuntu-advantage-tools==8001
 ubuntu-drivers-common==0.0.0
 ufw==0.36.1
+ujson==5.7.0
 unattended-upgrades==0.1
 urllib3==1.26.5
 usb-creator==0.3.7
+uvicorn==0.22.0
+uvloop==0.17.0
 wadllib==1.3.6
+watchfiles==0.19.0
+websockets==11.0.3
 xdg==5
 xkit==0.0.0
 xxhash==3.2.0
